--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   sqflite: ^2.0.0+4
   shared_preferences: ^2.0.0
+  flutter_secure_storage: ^9.2.2
+  
   path: ^1.8.1
 
 dev_dependencies:
